# mrpack-downloader

./: .gitignore  BUILD.md  CREATING_RELEASES.md  Cargo.toml  GUI_FEATURES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PANDUAN_RELEASE.md  README.md  RELEASE_NOTES.md  WINDOWS_BUILD_COMPLETE.md  build-release.sh  create-release.sh
.github/workflows/: cd.yml  release-gui.yml  update-license-year.yml
curseforge-modpack-downloader/: README.md  _version.py  getch.py  gui.py  gui.spec  main.py  main.spec  pyproject.toml
src/: core.rs  curseforge.rs  gui.rs  hash_checks.rs  main.rs  schemas.rs
