[package]
name = "mrpack-downloader"
version = "0.3.0"
edition = "2021"
description = "Downloader for Modrinth modpacks (.mrpack files)"
license = "MIT"
repository = "https://github.com/JohnTheCoolingFan/mrpack-downloader"
authors = ["Jonh The Cooling Fan <ivan8215145640@gmail.com>"]
homepage = "https://discord.gg/rqkaeYJhzS"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_zip = { version = "0.0.11", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1.24", features = ["full"] }
tokio-util = {version = "0.7.10", features = ["full"] }
clap = { version = "4.1", features = ["derive"] }
indicatif = { version = "0.17", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = { version = "1.0", features = ["serde"] }
url = { version = "2.2", features = ["serde"] }
futures-util = "0.3"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
futures = "0.3.29"
dialoguer = "0.11.0"
sha1 = "0.10.6"
sha2 = "0.10.8"
hex = { version = "0.4.3", features = ["serde"] }
thiserror = "1.0.56"
