[package]
name = "mrpack-downloader"
version = "0.4.2"
edition = "2024"
description = "Downloader for Modrinth modpacks (.mrpack files)"
license = "MIT"
repository = "https://github.com/JohnTheCoolingFan/mrpack-downloader"
authors = ["Jonh The Cooling Fan <ivan8215145640@gmail.com>"]
homepage = "https://discord.gg/rqkaeYJhzS"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_zip = { version = "0.0.18", features = ["tokio", "tokio-fs", "deflate"] }
reqwest = { version = "0.12.3", features = ["stream"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
clap = { version = "4.1", features = ["derive"] }
indicatif = { version = "0.18", features = ["tokio"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
semver = { version = "1.0", features = ["serde"] }
url = { version = "2.2", features = ["serde"] }
futures-util = "0.3"
futures = "0.3.29"
dialoguer = "0.12.0"
sha1 = "0.10.6"
sha2 = "0.10.8"
hex = { version = "0.4.3", features = ["serde"] }
thiserror = "2.0.16"
convert_case = "0.8.0"
